// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId validation failed: field type not compatible",
                "userFriendlyMessage": "Field cannot be used as label identifier",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
              "universalIdentifier": Any<String>,
            },
            "metadataName": "objectMetadata",
            "status": "fail",
            "type": "update",
          },
        ],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "View field position cannot be lower than label identifier view field position",
                "userFriendlyMessage": "View field position cannot be lower than label identifier view field position",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataId": Any<String>,
              "id": Any<String>,
              "universalIdentifier": Any<String>,
              "viewId": Any<String>,
            },
            "metadataName": "viewField",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 objectMetadata, 1 viewField",
      "summary": {
        "objectMetadata": 1,
        "totalErrors": 2,
        "viewField": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "Invalid object input.",
    },
    "message": "New label identifier field not found for object metadata",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "GRAPHQL_VALIDATION_FAILED",
      "http": {
        "status": 400,
      },
      "userFriendlyMessage": "An error occurred.",
      "value": "not-a-uuid",
    },
    "message": "Invalid UUID",
    "name": "ValidationError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is null 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId cannot be null",
                "userFriendlyMessage": "Field label identifier is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
              "universalIdentifier": Any<String>,
            },
            "metadataName": "objectMetadata",
            "status": "fail",
            "type": "update",
          },
        ],
      },
      "message": "Validation failed for 1 objectMetadata",
      "summary": {
        "objectMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;
